# defimap-data-pipelines

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_dag_to_prod.yml
defimap_pipeline/: aave_extract.py  aave_load.py  aave_transform.py
